tdf#165011 accept empty second parameter of WEEKNUM spreadsheet function

and treat it like if it was the the default "1".

Change-Id: I618575a7441a2a6650228fc1a29177e294933ce0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181048
Tested-by: Jenkins
Reviewed-by: Andras Timar <andras.timar@collabora.com>